syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.Backend";
package CecoChat.Contracts.Backend;
import "uuid.proto";

message BackendMessage {
  int64 message_id = 1;
  CecoChat.Contracts.Uuid client_id = 2;
  int64 sender_id = 3;
  int64 receiver_id = 4;
  BackendMessageType type = 5;
  oneof data {
    string text = 6;
  }
}

enum BackendMessageType {
  UNKNOWN = 0;
  PLAIN_TEXT = 1;
}
